syntax = "proto3";

option go_package = "github.com/nutreet/common/proto";

service UserService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc GetAuthenticatedUser(GetAuthenticatedUserRequest) returns (GetAuthenticatedUserResponse) {}
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string repeat_password = 3;
    string first_name = 4;
    string last_name = 5;
}

message RegisterResponse {
    string uid = 1;
}

message GetAuthenticatedUserRequest {
    string token = 1;
}

message GetAuthenticatedUserResponse {
    string uid = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
}
